att home css e js

--- a/pages/home/teste.html
+++ b/pages/home/teste.html
@@ -4,14 +4,14 @@
   
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dashboard Solar - GoodWe Style</title>
+  <title>Dashboard Solar - GOOD-ENERGY Style</title>
   <link rel="stylesheet" href="Hub.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
 </head>
 <body>
   <header>
-    <img src="https://www.goodwe.com/uploads/logo.png" alt="GoodWe Logo" class="logo" />
+    <img src="https://www.goodwe.com/uploads/logo.png" alt="GOOD-ENERGY Logo" class="logo" />
     <h1>Bem-vindo, Usuário</h1>
     <div class="menu">&#9776;</div>
   </header>
