--- a/pages/home/teste.html
+++ b/pages/home/teste.html
@@ -52,10 +52,10 @@
 
   <footer>
     <nav>
-      <a href="#">🏠</a>
-      <a href="#">📈</a>
-      <a href="#">💡</a>
-      <a href="#">👤</a>
+     <img src="" alt="">
+     <img src="" alt="">
+     <img src="" alt="">
+     <img src="" alt="">
     </nav>
   </footer>
 </body>
