--- a/pages/home/teste.html
+++ b/pages/home/teste.html
@@ -52,10 +52,10 @@
 
   <footer>
     <nav>
-     <img src="" alt="">
-     <img src="" alt="">
-     <img src="" alt="">
-     <img src="" alt="">
+     <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/pages/home/icon/casa.png?raw=true" alt="inicio">
+     <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/pages/home/icon/lampada.png?raw=true" alt="Idea">
+     <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/pages/home/icon/2890574_ai_artificial%20intelligence_domotics_electronics_futuristic_icon.png?raw=true" alt="IA integration">
+     <img src="" alt="User Profile">
     </nav>
   </footer>
 </body>
