--- a/pages/home/teste.html
+++ b/pages/home/teste.html
@@ -37,26 +37,79 @@
       <p class="value">R$ 8.436</p>
     </div>
   </section>
+  
 
   <section class="grafico">
     <h3>Geração Diária</h3>
     <div class="grafico-fake">[ GRÁFICO AQUI ]</div>
   </section>
 
-  <section class="botoes">
-    <button>📊 Monitoramento</button>
-    <button>📁 Histórico</button>
-    <button>⚡ Fluxo de Energia</button>
-    <button>🔔 Alertas</button>
-  </section>
+
+
+
+
+
+
+  
+
+
+
+
+<section class="botoes">
+  <button>
+    <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/pages/home/icon/grafico.png?raw=true" alt="Monitoramento">
+     Monitoramento
+  </button>
+  <button>
+    <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/pages/home/icon/416376_envelope_files_folder_interface_office_icon.png?raw=true" alt="Histórico">
+     Histórico
+  </button>
+  <button>
+    <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/pages/home/icon/8962573_flash_lightning_thunder_fast_quick_icon.png?raw=true" alt="Fluxo de Energia">
+     Fluxo de Energia
+  </button>
+  <button>
+    <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/pages/home/icon/8541621_bell_alert_icon.png?raw=true" alt="Alertas">
+     Alertas
+  </button>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   <footer>
-    <nav>
-     <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/pages/home/icon/casa.png?raw=true" alt="inicio">
-     <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/pages/home/icon/lampada.png?raw=true" alt="Idea">
-     <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/pages/home/icon/2890574_ai_artificial%20intelligence_domotics_electronics_futuristic_icon.png?raw=true" alt="IA integration">
-     <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/pages/home/icon/7295007_user_avatar_profile_person_man_icon.png?raw=true" alt="User Profile">
-    </nav>
-  </footer>
-</body>
-</html>
+  <nav>
+    <a href="#">
+      <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/pages/home/icon/casa.png?raw=true" alt="Início">
+      <span>Início</span>
+    </a>
+    <a href="#">
+      <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/pages/home/icon/lampada.png?raw=true" alt="Luz">
+      <span>Consumo</span>
+    </a>
+    <a href="#">
+      <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/pages/home/icon/2890574_ai_artificial%20intelligence_domotics_electronics_futuristic_icon.png?raw=true" alt="IA">
+      <span>IA</span>
+    </a>
+    <a href="#">
+      <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/pages/home/icon/7295007_user_avatar_profile_person_man_icon.png?raw=true" alt="Perfil">
+      <span>Perfil</span>
+    </a>
+  </nav>
+</footer>
