tema preto e laranja

--- a/pages/home/teste.html
+++ b/pages/home/teste.html
@@ -30,12 +30,12 @@
     </div>
     <div class="card">
       <h3>Consumo Total</h3>
-      <p class="value">10,13 MWh</p>
+      <p class="value consumo-valor">10,13 MWh</p>
     </div>
     <div class="card">
-      <h3>Economia</h3>
-      <p class="value">R$ 8.436</p>
-    </div>
+  <h3>Economia</h3>
+  <p class="value economia-valor">R$ 8.436</p>
+</div>
   </section>
   
 
