--- a/pages/home/teste.html
+++ b/pages/home/teste.html
@@ -47,14 +47,15 @@
 
 
 
+  <section class="alertas">
+    <h3>Alertas Recentes</h3>
+    <ul>
+      <li>Alerta: Consumo elevado detectado!</li>
+      <li>Alerta: Falha na conexão com o inversor.</li>
+      <li>Alerta: Bateria com nível baixo.</li>
+    </ul>
 
-
-
-  
-
-
-
-
+    
 <section class="botoes">
   <button>
     <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/pages/home/icon/grafico.png?raw=true" alt="Monitoramento">
