--- a/pages/home/main-page.html
+++ b/pages/home/main-page.html
@@ -54,11 +54,11 @@
       <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/pages/home/icon/8962573_flash_lightning_thunder_fast_quick_icon.png?raw=true" alt="Fluxo de Energia">
       Fluxo de Energia
     </a>
-    <a href="alertas.html" class="btn-alertas">
-      <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/pages/home/icon/8541621_bell_alert_icon.png?raw=true" alt="Alertas">
-      Alertas
-      <span class="contador-alertas">3</span>
-    </a>
+    <a href="../alertas/alertas.html" class="btn-alertas">
+  <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/pages/home/icon/8541621_bell_alert_icon.png?raw=true" alt="Alertas">
+  Alertas
+  <span class="contador-alertas">3</span>
+</a>
   </section>
 
   <footer>
