--- a/pages/alertas/alertas.html
+++ b/pages/alertas/alertas.html
@@ -36,6 +36,8 @@
   <div class="alerta">
     ✅ Login efetuado com sucesso!
   </div>
-  <a href="main-page.html">⬅ Voltar ao Dashboard</a>
+  <a href="../home/main-page.html" class="btn-voltar">
+  ⬅ Voltar ao Dashboard
+</a>
 </body>
 </html>
