--- a/pages/home/main-page.html
+++ b/pages/home/main-page.html
@@ -42,15 +42,15 @@
   </section>
 
   <section class="botoes">
-    <a href="#">
+    <a href="../monitoramento/monitoramento.html" class="btn-monitoramento">
       <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/pages/home/icon/grafico.png?raw=true" alt="Monitoramento">
       Monitoramento
     </a>
-    <a href="#">
+    <a href="../historico/historico.html" class="btn-historico">
       <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/pages/home/icon/416376_envelope_files_folder_interface_office_icon.png?raw=true" alt="Histórico">
       Histórico
     </a>
-    <a href="#">
+    <a href="../fluxo-de-energia/Fluxo.html" class="btn-fluxo">
       <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/pages/home/icon/8962573_flash_lightning_thunder_fast_quick_icon.png?raw=true" alt="Fluxo de Energia">
       Fluxo de Energia
     </a>
