--- a/pages/alertas/alertas.html
+++ b/pages/alertas/alertas.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>📢 Alertas</h1>
+    <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/pages/home/icon/9929074_marketing_market_social_advertising_promotion_icon.png?raw=true" alt="alertas">
     <a href="../home/main-page.html" class="btn-voltar">⬅ Voltar ao Dashboard</a>
   </header>
 
