--- a/pages/fluxo-de-energia/Fluxo.html
+++ b/pages/fluxo-de-energia/Fluxo.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fluxo de Energia</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Monitoramento - GOOD-ENERGY</title>
+  <link rel="stylesheet" href="fluxo.css">
 </head>
 <body>
-<a href="../home/main-page.html" class="btn-voltar">
-⬅ Voltar ao Dashboard
+  <header>
+    <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/pages/home/icon/9929074_marketing_market_social_advertising_promotion_icon.png?raw=true" alt="alertas">
+    <a href="../home/main-page.html" class="btn-voltar">⬅ Voltar ao Dashboard</a>
+  </header>
+
+  
 </body>
 </html>
