arrumando caminhos das pages

--- a/FrontGoodEnergy/pages/index.html
+++ b/FrontGoodEnergy/pages/index.html
@@ -4,20 +4,23 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>GoodEnergy — Energia solar inteligente</title>
-  <link rel="icon" type="image/png" href="/assets/logo.png">
-  <link rel="stylesheet" href="/styles/styles.css" />
+  <link rel="icon" type="image/png" href="../assets/logo.png">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="../styles/styles.css" />
+
 </head>
 <body class="hero">
   <div class="panel">
     <div class="brand-lg">
-      <img src="/assets/logo.png" alt="raio">
+      <img src="../assets/logo.png" alt="raio">
       <h1>GoodEnergy</h1>
     </div>
     <p style="color:#cbd5e1; margin:0 0 20px 0;">
       Sua energia, sob seu controle.
     </p>
-    <a class="icon-btn" href="/pages/login.html">Entrar</a>
+    <a class="icon-btn" href="../pages/login.html">Entrar</a>
   </div>
-  <script src="./js/app.js"></script>
+  <script src="../js/app.js"></script>
 </body>
 </html>
