--- a/FrontGoodEnergy/pages/login.html
+++ b/FrontGoodEnergy/pages/login.html
@@ -4,13 +4,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Login — GoodEnergy</title>
-  <link rel="icon" type="image/png" href="/assets/logo.png">
-  <link rel="stylesheet" href="/styles/styles.css" />
+  <link rel="icon" type="image/png" href="../assets/logo.png">
+  <link rel="stylesheet" href="../styles/styles.css" />
 </head>
 <body class="hero" data-active="login">
   <div class="panel">
     <div class="brand-lg">
-      <img src="/assets/logo.png" alt="raio"><h1>Entrar</h1>
+      <img src="../assets/logo.png" alt="raio"><h1>Entrar</h1>
     </div>
     <form id="loginForm" class="mt12">
       <label>Nome</label>
@@ -20,9 +20,9 @@
       <label class="mt12">Senha</label>
       <input name="pass" type="password" placeholder="••••••••">
       <button class="icon-btn mt18" type="submit">Entrar</button>
-      <a class="right mt18" href="/pages/index.html">Voltar</a>
+      <a class="right mt18" href="./pages/index.html">Voltar</a>
     </form>
   </div>
-  <script src="/js/app.js"></script>
+  <script src="../js/app.js"></script>
 </body>
 </html>
