--- a/FrontGoodEnergy/pages/devices.html
+++ b/FrontGoodEnergy/pages/devices.html
@@ -4,13 +4,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Dispositivos — GoodEnergy</title>
-  <link rel="icon" type="image/png" href="/assets/logo.png">
-  <link rel="stylesheet" href="/styles/styles.css" />
+  <link rel="icon" type="image/png" href="../assets/logo.png">
+  <link rel="stylesheet" href="../styles/styles.css" />
 </head>
 <body data-active="devices">
   <div class="app">
     <aside class="sidebar">
-      <div class="brand"><img src="/assets/logo.png"><h1>GoodEnergy</h1></div>
+      <div class="brand"><img src="../assets/logo.png"><h1>GoodEnergy</h1></div>
       <nav class="nav"></nav>
       <div class="foot">Olá, <span id="userName">Usuário</span></div>
     </aside>
@@ -31,6 +31,6 @@
       </div>
     </main>
   </div>
-  <script src="/js/app.js"></script>
+  <script src="../js/app.js"></script>
 </body>
 </html>
