--- a/FrontGoodEnergy/pages/settings.html
+++ b/FrontGoodEnergy/pages/settings.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Configurações — GoodEnergy</title>
   <link rel="icon" type="image/png" href="/assets/logo.png">
-  <link rel="stylesheet" href="/styles/styles.css" />
+  <link rel="stylesheet" href="../styles/styles.css" />
 </head>
 <body data-active="settings">
   <div class="app">
     <aside class="sidebar">
-      <div class="brand"><img src="/assets/logo.png"><h1>GoodEnergy</h1></div>
+      <div class="brand"><img src="../assets/logo.png"><h1>GoodEnergy</h1></div>
       <nav class="nav"></nav>
       <div class="foot">Olá, <span id="userName">Usuário</span></div>
     </aside>
@@ -48,6 +48,6 @@
       </div>
     </main>
   </div>
-  <script src="/js/app.js"></script>
+  <script src="../js/app.js"></script>
 </body>
 </html>
