--- a/FrontGoodEnergy/pages/index.html
+++ b/FrontGoodEnergy/pages/index.html
@@ -13,7 +13,7 @@
 <body class="hero">
   <div class="panel">
     <div class="brand-lg">
-      <img src="../assets/logo.png" alt="raio">
+      <img src="../assets/" alt="raio">
       <h1>GoodEnergy</h1>
     </div>
     <p style="color:#cbd5e1; margin:0 0 20px 0;">
