--- a/FrontGoodEnergy/pages/index.html
+++ b/FrontGoodEnergy/pages/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>GoodEnergy — Energia solar inteligente</title>
-  <link rel="icon" type="image/png" href="../assets/logo.png">
+  <link rel="icon" type="image/png" href="../assets/logo-Good_energy_grey2.png" />
 
   <!-- CSS -->
   <link rel="stylesheet" href="../styles/styles.css" />
@@ -13,7 +13,7 @@
 <body class="hero">
   <div class="panel">
     <div class="brand-lg">
-      <img src="../assets/" alt="raio">
+      <img src="../assets/logo-Good_energy_yellow.png" alt="raio">
       <h1>GoodEnergy</h1>
     </div>
     <p style="color:#cbd5e1; margin:0 0 20px 0;">
