--- a/FrontGoodEnergy/pages/dashboard.html
+++ b/FrontGoodEnergy/pages/dashboard.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Dashboard — GoodEnergy</title>
-  <link rel="icon" type="image/png" href="../assets/logo.png">
+  <link rel="icon" type="image/png" href="../assets/logo-Good_energy_grey2.png">
   <link rel="stylesheet" href="../styles/styles.css" />
   <script src="/https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body data-active="dashboard">
   <div class="app">
     <aside class="sidebar">
-      <div class="brand"><img src="../assets/logo.png"><h1>GoodEnergy</h1></div>
+      <div class="brand"><img src="../assets/logo-Good_energy_blue.png"><h1>GoodEnergy</h1></div>
       <nav class="nav"></nav>
       <div class="foot">Olá, <span id="userName">Usuário</span></div>
     </aside>
