--- a/FrontGoodEnergy/pages/login.html
+++ b/FrontGoodEnergy/pages/login.html
@@ -4,13 +4,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Login — GoodEnergy</title>
-  <link rel="icon" type="image/png" href="../assets/logo.png">
+  <link rel="icon" type="image/png" href="../assets/logo-Good_energy_yellow.png">
   <link rel="stylesheet" href="../styles/styles.css" />
 </head>
 <body class="hero" data-active="login">
   <div class="panel">
     <div class="brand-lg">
-      <img src="../assets/logo.png" alt="raio"><h1>Entrar</h1>
+      <img src="../assets/logo-Good_energy_yellow.png" alt="GoodEnergy-Logo"><h1>Entrar</h1>
     </div>
     <form id="loginForm" class="mt12">
       <label>Nome</label>
