--- a/FrontGoodEnergy/pages/login.html
+++ b/FrontGoodEnergy/pages/login.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Login — GoodEnergy</title>
-  <link rel="icon" type="image/png" href="../assets/logo-Good_energy_yellow.png">
+  <link rel="icon" type="image/png" href="../assets/logo-Good_energy_grey2.png" />
   <link rel="stylesheet" href="../styles/styles.css" />
 </head>
 <body class="hero" data-active="login">
