--- a/FrontGoodEnergy/pages/login.html
+++ b/FrontGoodEnergy/pages/login.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Título da página -->
   <title>Login — GoodEnergy</title>
-  <link rel="icon" type="image/png" href="../assets/logo-Good_energy_grey2.png" />
-  <link rel="stylesheet" href="../styles/styles.css" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="../assets/icons/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="../assets/icons/favicon.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="../assets/icons/favicon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="../assets/icons/favicon.png">
+
+  <!-- Estilo principal -->
+  <link rel="stylesheet" href="../styles/styles.css">
+
 </head>
 <body class="hero" data-active="login">
   <div class="panel">
