--- a/FrontGoodEnergy/pages/help.html
+++ b/FrontGoodEnergy/pages/help.html
@@ -4,7 +4,17 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Ajuda & FAQ — GoodEnergy</title>
-  <link rel="icon" type="image/png" href="../assets/logo-Good_energy_grey2.png">
+
+  <!-- Favicons -->
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/Logo_fav/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/Logo_fav/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/Logo_fav/apple-touch-icon.png">
+  <link rel="manifest" href="assets/Logo_fav/site.webmanifest">
+
+  <!-- Cor da barra em navegadores mobile -->
+  <meta name="theme-color" content="#ffffff">
+
+  
   <link rel="stylesheet" href="../styles/styles.css" />
 </head>
 <body data-active="help">
