--- a/FrontGoodEnergy/pages/login.html
+++ b/FrontGoodEnergy/pages/login.html
@@ -8,11 +8,14 @@
   <!-- Título da página -->
   <title>Login — GoodEnergy</title>
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="../assets/icons/favicon.ico">
-  <link rel="icon" type="image/png" sizes="32x32" href="../assets/icons/favicon.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="../assets/icons/favicon.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="../assets/icons/favicon.png">
+<!-- Favicons -->
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/Logo_fav/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/Logo_fav/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/Logo_fav/apple-touch-icon.png">
+  <link rel="manifest" href="assets/Logo_fav/site.webmanifest">
+
+  <!-- Cor da barra em navegadores mobile -->
+  <meta name="theme-color" content="#ffffff">
 
   <!-- Estilo principal -->
   <link rel="stylesheet" href="../styles/styles.css">
