--- a/FrontGoodEnergy/pages/reports.html
+++ b/FrontGoodEnergy/pages/reports.html
@@ -4,9 +4,18 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Relatórios — GoodEnergy</title>
-  <link rel="icon" type="image/png" href="../assets/logo-Good_energy_grey2.png">
   <link rel="stylesheet" href="../styles/styles.css" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+<!-- Favicons -->
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/Logo_fav/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/Logo_fav/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/Logo_fav/apple-touch-icon.png">
+  <link rel="manifest" href="assets/Logo_fav/site.webmanifest">
+
+  <!-- Cor da barra em navegadores mobile -->
+  <meta name="theme-color" content="#ffffff">
+
 </head>
 <body data-active="reports">
   <div class="app">
