--- a/FrontGoodEnergy/pages/index.html
+++ b/FrontGoodEnergy/pages/index.html
@@ -6,6 +6,17 @@
   <title>GoodEnergy — Energia solar inteligente</title>
   <link rel="icon" type="image/png" href="../assets/logo-Good_energy_grey2.png" />
 
+
+  <!-- Favicons -->
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/Logo_fav/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/Logo_fav/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/Logo_fav/apple-touch-icon.png">
+  <link rel="manifest" href="assets/Logo_fav/site.webmanifest">
+
+  <!-- Cor da barra em navegadores mobile -->
+  <meta name="theme-color" content="#ffffff">
+
+
   <!-- CSS -->
   <link rel="stylesheet" href="../styles/styles.css" />
 
