--- a/FrontGoodEnergy/pages/index.html
+++ b/FrontGoodEnergy/pages/index.html
@@ -12,6 +12,8 @@
   <link rel="icon" type="image/png" sizes="16x16" href="assets/Logo_fav/favicon-16x16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="assets/Logo_fav/apple-touch-icon.png">
   <link rel="manifest" href="assets/Logo_fav/site.webmanifest">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/logo_nav/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/logo_nav/favicon-32x32.png">
 
   <!-- Cor da barra em navegadores mobile -->
   <meta name="theme-color" content="#ffffff">
