ajustando logo no navegador

--- a/FrontGoodEnergy/pages/devices.html
+++ b/FrontGoodEnergy/pages/devices.html
@@ -3,13 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="shortcut icon" href="/FrontGoodEnergy/assets/ico/GE_definitive-1111.ico" type="image/x-icon">
   <title>Dispositivos — GoodEnergy</title>
 
-  <!-- Favicons -->
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/Logo_fav/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/Logo_fav/favicon-16x16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/Logo_fav/apple-touch-icon.png">
-  <link rel="manifest" href="assets/Logo_fav/site.webmanifest">
+
 
   <!-- Cor da barra em navegadores mobile -->
   <meta name="theme-color" content="#ffffff">
