--- a/FrontGoodEnergy/pages/index.html
+++ b/FrontGoodEnergy/pages/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="shortcut icon" href="ico/ima" type="image/x-icon">
+  <link rel="shortcut icon" href="/FrontGoodEnergy/assets/ico/GE_definitive-1111.ico" type="image/x-icon">
   <title>GoodEnergy — Energia solar inteligente</title>
 
 
