--- a/FrontGoodEnergy/pages/reports.html
+++ b/FrontGoodEnergy/pages/reports.html
@@ -7,12 +7,8 @@
   <link rel="stylesheet" href="../styles/styles.css" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-<!-- Favicons -->
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/Logo_fav/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/Logo_fav/favicon-16x16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/Logo_fav/apple-touch-icon.png">
-  <link rel="manifest" href="assets/Logo_fav/site.webmanifest">
 
+  <link rel="shortcut icon" href="/FrontGoodEnergy/assets/ico/GE_definitive-1111.ico" type="image/x-icon">
   <!-- Cor da barra em navegadores mobile -->
   <meta name="theme-color" content="#ffffff">
 
