--- a/FrontGoodEnergy/pages/index.html
+++ b/FrontGoodEnergy/pages/index.html
@@ -18,7 +18,7 @@
 <body class="hero">
   <div class="panel">
     <div class="brand-lg">
-      <img src="../assets/logo-Good_energy_yellow.png" alt="raio">
+      <img src="../assets/Imagem_do_WhatsApp_de_2025-09-11_à_s__00.15.56_e727786c-removebg-preview.png" alt="raio">
       <h1>GoodEnergy</h1>
     </div>
     <p style="color:#cbd5e1; margin:0 0 20px 0;">
