--- a/FrontGoodEnergy/pages/help.html
+++ b/FrontGoodEnergy/pages/help.html
@@ -23,7 +23,9 @@
     </aside>
 
     <main>
-      <div class="topbar"><div class="search"><input placeholder="Como podemos ajudar?"></div></div>
+      <div class="topbar">
+        <button class="ai-assistant-btn">Assistente IA</button>
+      </div>
       <div class="content">
         <div class="card">
           <h3>Perguntas frequentes</h3>
@@ -36,7 +38,7 @@
         </div>
         <div class="card">
           <h3>Suporte</h3>
-          <p>Envie um e-mail para <a href="#">suporte@goodenergy.dev</a> ou abra um chamado no painel do usuário.</p>
+          <p>Envie um e-mail para <a href="#">suporte@goodenergy.dev</a> ou fale com nosso assistente de ia.</p>
         </div>
       </div>
     </main>
