--- a/FrontGoodEnergy/pages/index.html
+++ b/FrontGoodEnergy/pages/index.html
@@ -24,7 +24,10 @@
     <p style="color:#cbd5e1; margin:0 0 20px 0;">
       Sua energia, sob seu controle.
     </p>
-    <a class="icon-btn" href="../pages/login.html">Entrar</a>
+    <div style="display: flex; gap: 12px;">
+    <a class="icon-btn" href="/FrontGoodEnergy/pages/login.html" style="flex:1;">Entrar</a>
+    <a class="icon-btn secondary" href="/FrontGoodEnergy/pages/register.html" style="flex:1;">Criar Conta</a>
+</div>
   </div>
   <script src="../js/app.js"></script>
 </body>
