--- a/FrontGoodEnergy/pages/index.html
+++ b/FrontGoodEnergy/pages/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="shortcut icon" href="/FrontGoodEnergy/assets/ico/GE_definitive-1111.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/FrontGoodEnergy/assets/2amarelo-removebg-preview.png?raw=true" type="image/x-icon">
   <title>GoodEnergy — Energia solar inteligente</title>
 
 
@@ -18,7 +18,7 @@
 <body class="hero">
   <div class="panel">
     <div class="brand-lg">
-      <img src="../assets/Imagem_do_WhatsApp_de_2025-09-11_à_s__00.15.56_e727786c-removebg-preview.png" alt="raio">
+      <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/FrontGoodEnergy/assets/2amarelo-removebg-preview.png?raw=true" alt="logo-goodenergy" />
       <h1>GoodEnergy</h1>
     </div>
     <p style="color:#cbd5e1; margin:0 0 20px 0;">
