--- a/FrontGoodEnergy/pages/login.html
+++ b/FrontGoodEnergy/pages/login.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login — GoodEnergy</title>
-  <link rel="shortcut icon" href="../assets/ico/GE_definitive-1111.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/FrontGoodEnergy/assets/2amarelo-removebg-preview.png?raw=true" type="image/x-icon">
   <meta name="theme-color" content="#0b0f1a">
   <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body class="hero" data-active="login">
   <div class="panel">
     <div class="brand-lg">
-      <img src="../assets/logo-Good_energy_yellow.png" alt="GoodEnergy-Logo"><h1>Entrar na sua Conta</h1>
+      <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/FrontGoodEnergy/assets/2amarelo-removebg-preview.png?raw=true" alt="GoodEnergy-Logo"><h1>Entrar na sua Conta</h1>
     </div>
     <form id="loginForm" class="mt12">
       <label for="email">E-mail</label>
