--- a/FrontGoodEnergy/pages/settings.html
+++ b/FrontGoodEnergy/pages/settings.html
@@ -20,7 +20,7 @@
 
     <main>
       <div class="topbar">
-        <button class="ai-assistant-btn">Assistente IA</button>
+        <a href="assistenteIA.html" class="ai-assistant-btn">Assistente IA</a>
       </div>
       <div class="content">
         <div class="card">
