--- a/FrontGoodEnergy/pages/assistenteIA.html
+++ b/FrontGoodEnergy/pages/assistenteIA.html
@@ -61,7 +61,7 @@
                             <svg class="icon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M8 12h.01M12 12h.01M16 12h.01M21 12c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8c0 1.418.394 2.745 1.07 3.888l4.378 4.378c.504.504 1.17.778 1.879.778h1.087a6.05 6.05 0 00.778-1.879l4.378-4.378zM8 12a1 1 0 11-2 0 1 1 0 012 0zM12 8a1 1 0 11-2 0 1 1 0 012 0zM16 8a1 1 0 11-2 0 1 1 0 012 0z"></path></svg>
                             Suporte e Manutenção
                         </a>
-                        <a href="#home-automation" class="cta-button icon-link">
+                        <a href="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/FrontGoodEnergy/assets/2222.png?raw=true" class="cta-button icon-link">
                             <svg class="icon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M21 12a9 9 0 00-18 0c0 4.418 3.582 8 8 8s8-3.582 8-8zM12 17c-2.761 0-5-2.239-5-5 0-2.761 2.239-5 5-5s5 2.239 5 5c0 2.761-2.239 5-5 5z"></path><circle cx="12" cy="12" r="3"></circle></svg>
                             Casa Inteligente
                         </a>
