--- a/FrontGoodEnergy/pages/dashboard.html
+++ b/FrontGoodEnergy/pages/dashboard.html
@@ -18,7 +18,7 @@
 
         <main>
             <div class="topbar">
-                <button class="ai-assistant-btn">Assistente IA</button>
+                <a href="assistenteIA.html" class="ai-assistant-btn">Assistente IA</a>
                 <div class="actions">
                     <div style="position: relative;">
                         <button id="notificationsBtn" class="icon-btn">
