--- a/FrontGoodEnergy/pages/user.html
+++ b/FrontGoodEnergy/pages/user.html
@@ -18,7 +18,7 @@
 
         <main>
             <div class="topbar">
-                <button class="ai-assistant-btn">Assistente IA</button>
+                <a href="assistenteIA.html" class="ai-assistant-btn">Assistente IA</a>
             </div>
             <div class="content">
                 <div class="grid-2">
