--- a/FrontGoodEnergy/pages/assistenteIA.html
+++ b/FrontGoodEnergy/pages/assistenteIA.html
@@ -57,18 +57,20 @@
                     <h2>Maximize Sua Experiência com Energia Inteligente!</h2>
                     <p class="muted">Você já faz parte do futuro da energia. Explore todo o potencial do seu Assistente de IA, otimize seu consumo e descubra novas funcionalidades para tornar sua casa ainda mais conectada e eficiente.</p>
                     <div class="cta-actions">
-                        <a href="#chat-widget" class="cta-button icon-link">
-                            <svg class="icon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M8 12h.01M12 12h.01M16 12h.01M21 12c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8c0 1.418.394 2.745 1.07 3.888l4.378 4.378c.504.504 1.17.778 1.879.778h1.087a6.05 6.05 0 00.778-1.879l4.378-4.378zM8 12a1 1 0 11-2 0 1 1 0 012 0zM12 8a1 1 0 11-2 0 1 1 0 012 0zM16 8a1 1 0 11-2 0 1 1 0 012 0z"></path></svg>
-                            Suporte e Manutenção
-                        </a>
-                        <a href="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/FrontGoodEnergy/assets/2222.png?raw=true" class="cta-button icon-link">
-                            <svg class="icon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M21 12a9 9 0 00-18 0c0 4.418 3.582 8 8 8s8-3.582 8-8zM12 17c-2.761 0-5-2.239-5-5 0-2.761 2.239-5 5-5s5 2.239 5 5c0 2.761-2.239 5-5 5z"></path><circle cx="12" cy="12" r="3"></circle></svg>
-                            Casa Inteligente
-                        </a>
-                        <a href="#chat-widget" class="cta-button icon-link">
-                            <svg class="icon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M18.375 13.75c4.738-.736 8.625-3.555 8.625-7.75M3.75 13.75C8.49 13.014 12.375 10.195 12.375 6.013M12.375 19.504C17.113 18.768 21 15.95 21 12.013c0-4.738-3.582-8.625-8.625-8.625S3.75 7.275 3.75 12.013c0 4.738 3.582 8.625 8.625 8.625zM12.75 19.504C17.5 18.768 21 15.95 21 12.013c0-4.738-3.582-8.625-8.625-8.625s-8.625 3.887-8.625 8.625c0 4.738 3.582 8.625 8.625 8.625z"></path></svg>
-                            Fale com o Assistente
-                        </a>
+                    <a href="#chat-widget" class="cta-button icon-link">
+  <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/FrontGoodEnergy/assets/ia-good.png?raw=true" class="icon" alt="Ícone Suporte">
+  Suporte e Manutenção
+</a>
+
+<a href="#chat-widget" class="cta-button icon-link">
+  <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/FrontGoodEnergy/assets/2222.png?raw=true" class="icon" alt="Ícone Casa Inteligente">
+  Casa Inteligente
+</a>
+
+<a href="#chat-widget" class="cta-button icon-link">
+  <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/FrontGoodEnergy/assets/aiii.png?raw=true" class="icon" alt="Ícone Assistente">
+  Fale com o Assistente
+</a>
                     </div>
                 </section>
             </div>
