--- a/FrontGoodEnergy/pages/dashboard.html
+++ b/FrontGoodEnergy/pages/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" href="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/FrontGoodEnergy/assets/2amarelo-removebg-preview.png?raw=true" type="image/x-icon">
+    <link rel="shortcut icon" href="/FrontGoodEnergy/assets/GoodEnergyLogo.png" type="image/x-icon">
     <title>Dashboard — GoodEnergy</title>
     <link rel="stylesheet" href="../styles/styles.css" />
     <meta name="theme-color" content="#ffffff">
@@ -11,7 +11,7 @@
 <body data-active="dashboard">
     <div class="app">
         <aside class="sidebar">
-            <div class="brand"><img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/FrontGoodEnergy/assets/2amarelo-removebg-preview.png?raw=true"><h1>GoodEnergy</h1></div>
+            <div class="brand"><img src="/FrontGoodEnergy/assets/GoodEnergyLogo.png"><h1>GoodEnergy</h1></div>
             <nav class="nav"></nav>
             <div class="foot">Olá, <span id="userName">Usuário</span></div>
         </aside>
