--- a/FrontGoodEnergy/pages/chatbot.html
+++ b/FrontGoodEnergy/pages/chatbot.html
@@ -17,7 +17,12 @@
 
         <main>
             <div class="topbar">
-                <a href="assistenteIA.html" class="back-to-assistant-btn">Voltar ao início</a> </div>
+           <a href="assistenteIA.html" class="icon-btn back-to-assistant-btn">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+        <polyline points="9 22 9 12 15 12 15 22"></polyline>
+    </svg>
+</a> </div>
             
             <div class="content">
                 <div id="chat-widget" class="chat-widget show"> <div class="chat-header">
